[workspace]
members = [
    # actix_web depends on httparse which uses nightly features
    # "apiserver",
    # build error related to tokio_io::AsyncWrite
    # "async-compression",
    # "mercurial-bundles",
    "asyncmemo",
    # depends on failure_ext
    # "blobrepo",
    # "blobstore",
    # "bookmarks",
    # "bundle2-resolver",
    # "bonsai-utils",
    "bytes-ext",
    # depends on failure_ext
    # "changesets",
    # "common/pylz4",
    # "eden_server",
    # "filenodes",
    "futures-ext",
    # depends on failure_ext
    # "hgcli",
    # "hgproto",
    # "hooks",
    # "mercurial-types",
    # "mercurial",
    # "metaconfig",
    # "mononoke-types",
    # "repoinfo",
    # "revset",
    # "server",
    # "storage/filekv",
    # "vfs",
    # depends on netstring crate internal at fb
    # "sshrelay",
    "storage/types",
]
