[workspace]
members = [
    # actix_web depends on httparse which uses nightly features
    # "apiserver",
    # build error related to tokio_io::AsyncWrite
    # "async-compression",
    # "mercurial_bundles",
    # depends on failure_ext
    # "blobrepo",
    # "blobstore",
    # "bookmarks",
    # "bundle2_resolver",
    # "bonsai_utils",
    "bytes-ext",
    # depends on failure_ext
    # "changesets",
    # "eden_server",
    # "filenodes",
    "futures-ext",
    # depends on failure_ext
    # "hgcli",
    # "hgproto",
    # "hooks",
    # "mercurial_types",
    # "mercurial",
    # "metaconfig",
    # "mononoke_types",
    # "repoinfo",
    # "revset",
    # "server",
    # "storage/filekv",
    # "vfs",
    # depends on netstring crate internal at fb
    # "sshrelay",
    "storage/types",
]
