[package]
name = "bonsai_utils"
version = "0.0.1"
authors = ["Facebook"]
license = "GPLv2+"
edition = "2018"

[dependencies]
futures = "0.1.17"
itertools = "0.7.2"

futures-ext = { path = "../futures-ext" }
mercurial_types = { path = "../mercurial_types" }
mononoke_types = { path = "../mononoke_types" }
