# @autocargo from //common/rust/failure_ext:failure_ext
# Signature<<47c17cafb1fd9379d31c2aafce77a3146013d430>>
[package]
name = "failure_ext"
edition = "2018"
version = "0.0.1"
authors = ['Source Control Oncall oncall+source_control@xmail.facebook.com']
include = ["src/**/*.rs"]

[dependencies]
failure = "*"
failure_derive = "*"
futures = "0.1"
slog = { version="*", features=["max_level_debug"] }
thiserror = "*"
# @end of Signature<<47c17cafb1fd9379d31c2aafce77a3146013d430>>
