# @autocargo from //common/rust/failure_ext:failure_ext
# Signature<<208041a94f22b7e5bb3fd3a68ff8e9b73f7abb38>>
[package]
name = "failure_ext"
edition = "2018"
version = "0.0.1"
authors = ['Source Control Oncall oncall+source_control@xmail.facebook.com']
include = ["src/**/*.rs"]

[dependencies]
anyhow = "*"
failure = "*"
futures = "0.1"
slog = { version="*", features=["max_level_debug"] }
thiserror = "*"
# @end of Signature<<208041a94f22b7e5bb3fd3a68ff8e9b73f7abb38>>
