[workspace]
members = [
  "thrift/rust",
  "thrift/rust/clients",
  "thrift/rust/gen_safe_patch",
  "thrift/rust/gen_safe_patch/clients",
  "thrift/rust/gen_safe_patch/mocks",
  "thrift/rust/gen_safe_patch/services",
  "thrift/rust/mocks",
  "thrift/rust/services",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/facebook/fb303"
