# @autocargo from //common/rust/futures-ext:futures-ext
# Signature<<e6f3a09153bca62e0e61acb253c837a267763785>>
[package]
name = "futures-ext"
edition = "2018"
version = "0.0.1"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/**/*.rs"]

[dependencies]
cloned = { path = "../shed/cloned" }
failure_ext = { path = "../shed/failure_ext" }
bytes = { version="*", features=["serde"] }
futures = "0.1"
maplit = "*"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
async-unit = { path = "../async-unit" }
lock_ext = { path = "../shed/lock_ext" }
netstring = { path = "../shed/netstring" }
assert_matches = "*"
pretty_assertions = "*"
quickcheck = "0.9"
# @end of Signature<<e6f3a09153bca62e0e61acb253c837a267763785>>
