# @autocargo from //common/rust/futures-ext:futures-ext
# Signature<<7a2b3b0c37b455800779a2a16050d5a3b05b7ff4>>
[package]
name = "futures-ext"
edition = "2018"
version = "0.0.1"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/**/*.rs"]

[dependencies]
cloned = { path = "../shed/cloned" }
anyhow = "*"
bytes = { version="0.4", features=["serde"] }
futures = "0.1"
maplit = "*"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
async_unit = { path = "../shed/async_unit" }
lock_ext = { path = "../shed/lock_ext" }
netstring = { path = "../shed/netstring" }
assert_matches = "*"
pretty_assertions = "*"
quickcheck = "0.9"
# @end of Signature<<7a2b3b0c37b455800779a2a16050d5a3b05b7ff4>>
