# @autocargo from //common/rust/futures-ext:futures-ext
# Signature<<a9847c73c5a278c2b501d7c91e0e7e3936fa6131>>
[package]
name = "futures-ext"
edition = "2018"
version = "0.0.1"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/**/*.rs"]

[dependencies]
cloned = { path = "../shed/cloned" }
anyhow = "^1.0"
bytes = { version="0.4", features=["serde"] }
futures = "0.1"
maplit = "^1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
async_unit = { path = "../shed/async_unit" }
lock_ext = { path = "../shed/lock_ext" }
netstring = { path = "../shed/netstring" }
assert_matches = "^1.3"
pretty_assertions = "^0.6"
quickcheck = "0.9"
# @end of Signature<<a9847c73c5a278c2b501d7c91e0e7e3936fa6131>>
