[workspace]
members = [
    "blackbox",
    "blackbox/serde_alt",
    "bookmarkstore",
    "clidispatch",
    "cliparser",
    "commitcloudsubscriber",
    "configparser",
    "cpython-ext",
    "cpython-failure",
    "dag",
    "drawdag",
    "edenapi",
    "encoding",
    "hg_watchman_client",
    "indexedlog",
    "lz4-pyframe",
    "manifest",
    "minibench",
    "mpatch-sys",
    "mpatch",
    "mutationstore",
    "nodemap",
    "pathmatcher",
    "radixbuf",
    "revisionstore",
    "treestate",
    "types",
    "url-ext",
    "vlqencoding",
    "watchman_client",
    "zstdelta",
]

[profile.release]
lto = "thin"
