[workspace]
members = [
    "blackbox",
    "blackbox/serde_alt",
    "bookmarkstore",
    "clidispatch",
    "cliparser",
    "commitcloudsubscriber",
    "configparser",
    "cpython-ext",
    "cpython-failure",
    "dag",
    "drawdag",
    "edenapi",
    "encoding",
    "hgpython",
    "hg_watchman_client",
    "indexedlog",
    "lz4-pyframe",
    "manifest",
    "minibench",
    "mpatch-sys",
    "mpatch",
    "mutationstore",
    "nodemap",
    "pathmatcher",
    "procinfo",
    "radixbuf",
    "revisionstore",
    "stackdesc",
    "treestate",
    "types",
    "vlqencoding",
    "watchman_client",
    "zstdelta",
]

[profile.release]
lto = "thin"
