[workspace]
members = [
    "blackbox",
    "blackbox/serde_alt",
    "bookmarkstore",
    "clidispatch",
    "cliparser",
    "commitcloudsubscriber",
    "configparser",
    "cpython-ext",
    "cpython-failure",
    "dag",
    "drawdag",
    "edenapi",
    "encoding",
    "hgcommands",
    "hg_watchman_client",
    "indexedlog",
    "lz4-pyframe",
    "manifest",
    "minibench",
    "mpatch",
    "mpatch-sys",
    "mutationstore",
    "nodemap",
    "pathmatcher",
    "procinfo",
    "radixbuf",
    "revisionstore",
    "stackdesc",
    "treestate",
    "types",
    "util",
    "vlqencoding",
    "watchman_client",
    "zstdelta",
]

[profile.release]
lto = "thin"
