# @autocargo from //common/rust/netstring:netstring
# Signature<<99e6fa71cb31dfc8e9eceec72b7968693d33f01e>>
[package]
name = "netstring"
edition = "2018"
version = "0.1.0"
authors = ['Jeremy Fitzhardinge <jsgf@fb.com>']
include = ["src/**/*.rs"]

[dependencies]
failure_ext = { path = "../failure_ext" }
bytes = { version="*", features=["serde"] }
tokio-io = "0.1"

[dev-dependencies]
quickcheck = "0.9"
# @end of Signature<<99e6fa71cb31dfc8e9eceec72b7968693d33f01e>>
