# @autocargo from //common/rust/netstring:netstring
# Signature<<0e16a7ecf7106e41d1f700f98f675d5ee574d48e>>
[package]
name = "netstring"
edition = "2018"
version = "0.1.0"
authors = ['Jeremy Fitzhardinge <jsgf@fb.com>']
include = ["src/**/*.rs"]

[dependencies]
failure_ext = { path = "../failure_ext" }
bytes = { version="*", features=["serde"] }
thiserror = "*"
tokio-io = "0.1"

[dev-dependencies]
quickcheck = "0.9"
# @end of Signature<<0e16a7ecf7106e41d1f700f98f675d5ee574d48e>>
