# @autocargo from //common/rust/netstring:netstring
# Signature<<51e012b2e5b5283bd99f895f828af243893c6755>>
[package]
name = "netstring"
edition = "2018"
version = "0.1.0"
authors = ['Jeremy Fitzhardinge <jsgf@fb.com>']
include = ["src/**/*.rs"]

[dependencies]
failure_ext = { path = "../shed/failure_ext" }
bytes = { version="*", features=["serde"] }
thiserror = "*"
tokio-io = "0.1"

[dev-dependencies]
quickcheck = "0.9"
# @end of Signature<<51e012b2e5b5283bd99f895f828af243893c6755>>
