[package]
name = "server"
version = "0.0.1"
authors = ["Facebook"]
license = "GPLv2+"
edition = "2018"

[dependencies]
clap = "2.27.1"
error-chain = "0.11.0"
futures = "0.1.17"
slog = "2.0.12"
tokio-core = "0.1.10"
tokio-io = "0.1.4"
tokio-uds = "0.1.7"

bookmarks = {path = "../bookmarks" }
futures-ext = { path = "../futures-ext" }
